<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/busqueda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="102dp"
        android:hint="@string/search_hint"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:id="@+id/text_explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="35dp"
        android:layout_marginVertical="40dp"
        android:layout_marginStart="62dp"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="35dp"
        android:text="@string/explore"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="41dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:contentDescription="@string/profile_picture_placeholder"
        android:src="@drawable/blank_avatar" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/profile_pic"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/test_name"
        android:gravity="right"
        android:textStyle="bold"
        android:fontFamily="@font/dmsans"
        android:maxLength="15"
        android:textSize="20sp"
        android:layout_toStartOf="@id/profile_pic" />

    <ImageView
        android:id="@+id/menu"
        android:layout_width="28dp"
        android:layout_height="26dp"
        app:srcCompat="@drawable/menu"
        android:layout_margin="12dp"
        android:contentDescription="@string/menu"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/publications"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:layout_below="@id/busqueda"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="15dp"
        android:contentDescription="@string/create_pub"
        android:backgroundTint="@color/orange"
        android:id="@+id/create_pub"
        android:src="@android:drawable/ic_input_add"
        tools:targetApi="lollipop"
        android:onClick=".onClickCreate" />

</RelativeLayout>