<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/menu"
        android:layout_width="28dp"
        android:layout_height="26dp"
        app:srcCompat="@drawable/menu"
        android:layout_margin="20dp"
        android:contentDescription="@string/menu"
        />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:minWidth="130dp"
        android:minHeight="130dp"
        android:maxWidth="130dp"
        android:maxHeight="130dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/profile"
        android:layout_marginRight="50dp"
        android:contentDescription="@string/profile_picture_placeholder"
        android:src="@drawable/blank_avatar"
        android:layout_marginEnd="50dp" />

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:textSize="40dp"
        android:textStyle="bold"
        android:fontFamily="@font/dmsans"
        android:layout_alignParentRight="true" />

    <ImageView
        android:id="@+id/profile_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/profile"
        android:layout_marginTop="30dp"
        android:src="@android:drawable/ic_menu_edit"
        android:layout_toStartOf="@id/profile"
        android:contentDescription="edit" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/profile_pic"
        android:layout_below="@id/menu"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="25sp"
        android:text="Nombre"
        android:gravity="right"
        android:textStyle="bold"
        android:maxLines="7"/>

    <TextView
        android:id="@+id/profile_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/profile_pic"
        android:layout_below="@id/profile_name"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="15sp"
        android:text="@string/large_text"
        android:gravity="right"
        android:maxLines="5"/>

    <TextView
        android:id="@+id/pub_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publicaciones"
        android:layout_below="@id/profile_pic"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/publications"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/pub_text"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp">

    </androidx.recyclerview.widget.RecyclerView>
</RelativeLayout>