<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="25dp"
        app:srcCompat="@drawable/blank_avatar"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="58dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_pic"
        android:layout_toRightOf="@id/profile_pic"
        android:layout_marginTop="30dp"
        android:textSize="50sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/profile_name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_pic"
        android:text="@string/profile_name"
        android:textSize="30sp"
        android:layout_marginHorizontal="20dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/profile_name_txt"/>

    <TextView
        android:id="@+id/profile_description_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_name"
        android:layout_marginTop="15dp"
        android:text="@string/profile_description"
        android:textSize="30sp"
        android:layout_marginHorizontal="20dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/profile_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:minLines="2"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@+id/profile_description_txt"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/email_and_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_description"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/email_and_password"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/email_and_password"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="20dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/email"
        android:inputType="textPassword"
        android:layout_marginHorizontal="20dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/finalize_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:backgroundTint="@color/orange"
        android:src="@drawable/check_mark"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/accept" />
</RelativeLayout>