<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PublicationActivity">


    <ImageView
        android:id="@+id/menu"
        android:layout_width="28dp"
        android:layout_height="26dp"
        app:srcCompat="@drawable/menu"
        android:layout_margin="25dp"
        android:contentDescription="@string/menu"
    />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="41dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:contentDescription="@string/profile_picture_placeholder"
        android:src="@drawable/blank_avatar" />

    <ImageView
        android:id="@+id/pub_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="fitStart"
        android:layout_margin="10dp"
        android:layout_below="@+id/profile_pic"
        app:srcCompat="@drawable/atardecer_con_barcos"
        />

    <TextView
        android:id="@+id/pub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pub_image"
        android:textSize="30sp"
        android:hint="Title"
        android:textStyle="bold"
        android:fontFamily="@font/dmsans"
        android:layout_marginHorizontal="20dp"
        />

    <TextView
        android:id="@+id/pub_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pub_title"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/large_text"
        android:textStyle="bold"
        android:fontFamily="@font/dmsans"
        />
</RelativeLayout>